# slurm_simulator_eamc-policy

./: .gitignore  README.md  RICC-2010-2-midseptember.mwf  RICC-2010-2-midseptember.swf  ascii.cirne.10n.maxjob8n.anl.200.sim  cirne.10n.maxjob8n.anl.200.sim  clean_db  compile_and_install_slurm.sh  create_db.sh  dep.mwf  dep.swf  features.mwf  het.mwf  install_slurm_sim.sh  parser.cpp  run_command.sh  run_command.template  run_local_simulation.sh  run_simulation_local.sh  run_simulation_module_energy_local.sh  run_simulation_module_local.sh  run_simulation_msa_local.sh  sample.mwf  submit_module_energy_simulation.sh  submit_serial_simulation.sh  swf2mwf.c
Models/: est.tgz  generator.sh  generator_modlist.sh  generator_modlist_deepest_model.sh  generator_modlist_deepest_model_multipercent.sh  generator_modlist_multipercent.sh  lublin.est-less.swf  lublin.swf  m_lublin99  m_lublin99.c  modlist2partition.sh  swf2mwf  swf2mwf.c  trace-delays.mwf  traceD2-2.mwf  traceD2-2.swf
Models/m_tsafrir05/: .est_driver.cc.swp  Makefile  est_driver  est_driver.cc  est_model.cc  est_model.hh  est_parse.cc  est_parse.hh  est_swf_job.hh  index.html
conf/: apps  juli.model  machine2.conf
en_conf/: 2hw.conf  machine1.conf  machine2.conf
en_conf/2hw/: apps  normal.energy  normal.power  normal.time  normal2.energy  normal2.power  normal2.time
install/: env.sh  reset_user.sh
install/slurm_conf/: slurm.conf.template  slurm_module.conf.template  slurm_module_energy.conf.template  slurm_msa.conf.template  slurmdbd.conf.template  users.sim
install/slurm_varios/: trace.sh.template
slurm/: .gitignore  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  missing.code.patch  tmp
slurm/auxdir/: Makefile.in
slurm/contribs/: Makefile  Makefile.am  Makefile.in
slurm/contribs/cray/: Makefile  Makefile.in
slurm/contribs/lua/: Makefile  Makefile.in
slurm/contribs/mic/: Makefile  Makefile.in
slurm/contribs/openlava/: Makefile  Makefile.in
slurm/contribs/pam/: Makefile  Makefile.in
slurm/contribs/pam_slurm_adopt/: Makefile  Makefile.in
slurm/contribs/perlapi/: Makefile  Makefile.in
slurm/contribs/pmi2/: Makefile  Makefile.in
slurm/contribs/seff/: Makefile  Makefile.in
slurm/contribs/sgather/: Makefile  Makefile.in
slurm/contribs/simulator/: .swf2trace_filter.c.swp  Makefile  Makefile.am  Makefile.in  cirne2trace_nodes.c  edit_trace  edit_trace.c  list_trace.c  mysql_trace_builder.c  sim_mgr.c  sim_trace.c  sim_trace.h  simdate.c  simqsnap.c  swf2trace  swf2trace.c  swf2trace_cirne  swf2trace_cirne.c  swf2trace_cirne_nodes.c  swf2trace_filter  swf2trace_filter.c  swf2trace_lub.c  trace_builder.c  update_trace.c
slurm/contribs/simulator/.deps/: edit_trace.Po  list_trace.Po  mysql_trace_builder-mysql_trace_builder.Po  sim_mgr.Po  sim_trace.Po  simdate.Po  simqsnap.Po  trace_builder.Po  update_trace.Po
slurm/doc/: Makefile.in
slurm/doc/html/: Makefile.in
slurm/etc/: Makefile.in
slurm/slurm/: slurm.h.in
slurm/src/: Makefile.in
slurm/src/plugins/priority/multifactor_energy/: Makefile.am  Makefile.in  fair_tree.h  priority_multifactor_energy.c
slurm/src/plugins/select/bsc_cons_res/: Makefile.am  Makefile.in  dist_tasks.c  dist_tasks.h  job_test.c  job_test.h  select_bsc_cons_res.c  select_bsc_cons_res.h
slurm/testsuite/: Makefile.in
(+366 files in other folders)
